--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,5 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-# I used some tools parsing the data that don't need to be on github.
-private/*
+# Custom
 .vscode/*
