--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,8 @@ python:
 install: pip3 install -e .
 
 script: python3 -m pytest tests/test.py
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
