--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+sudo: required
+
+services:
+  - docker
 
 language: python
 
@@ -12,3 +16,6 @@ matrix:
     - python: 3.7
       dist: xenial
       sudo: true
+
+after_success:
+  - sh .travis/deploy_dockerhub.sh
